--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                         {% if session.user %}
                         <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
                         <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
-                        <li><a href="{{ url_for('ingredient_search') }}">ingredient search</a></li>
+                        <li><a href="{{ url_for('ing_search') }}">ingredient search</a></li>
                         <li><a href="{{ url_for('logout') }}">log out</a></li>
                         {% else %}
                         <li><a href="{{ url_for('login') }}">log in</a></li>
@@ -69,7 +69,7 @@
             <li><a href="#" class="dropdown-trigger" data-target="dropdown1">recipes</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
             <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
-            <li><a href="{{ url_for('ingredient_search') }}">ingredient search</a></li>
+            <li><a href="{{ url_for('ing_search') }}">ingredient search</a></li>
             <li><a href="{{ url_for('logout') }}">log out</a></li>
             <li><a href="{{ url_for('login') }}">log in</a></li>
             <li><a href="{{ url_for('register') }}">register</a></li>
