--- a/templates/ingredients.html
+++ b/templates/ingredients.html
@@ -1,6 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3>test link</h3>
+<div class="container">
+    <div class="row card-panel">
+        <form action="{{ url_for('ing_search') }}" method="post" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12">
+                    <i class="fas fa-search prefix"></i>
+                    <input type="text" name="query" id="query" class="validate">
+                    <label for="query">search</label>
+                </div>
+                <div class="col s12 m4">
+                    <button type="submit" class="btn green">
+                        <i class="fas fa-search left"></i>search
+                    </button>
+                    <a href="{{ url_for('all_recipes') }}" class="red btn">reset</a>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
 
 {% endblock %}
