--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,7 +14,7 @@
                     </li>
                     <li class="left-align"><a class="land-link" href="{{ url_for('add_recipe') }}">add your own
                             favourites!</a></li>
-                    <li class="left-align"><a class="land-link" href="{{ url_for('ingredient_search') }}">search recipes
+                    <li class="left-align"><a class="land-link" href="{{ url_for('ing_search') }}">search recipes
                             by ingredient!</a></li>
                 </ul>
 
