--- a/templates/register.html
+++ b/templates/register.html
@@ -11,8 +11,21 @@
                 <input id="username" name="username" type="text" class="validate">
                 <label for="username">username</label>
             </div>
-
-
+            <div class="input-field col s12">
+                <i class="fas fa-user-plus prefix"></i>
+                <input id="user_first" name="user_first" type="text" class="validate">
+                <label for="user_first">first name</label>
+            </div>
+            <div class="input-field col s12">
+                <i class="fas fa-user-plus prefix"></i>
+                <input id="user_last" name="user_last" type="text" class="validate">
+                <label for="user_last">last name</label>
+            </div>
+            <div class="input-field col s12">
+                <i class="fas fa-user-plus prefix"></i>
+                <input id="user_email" name="user_email" type="text" class="validate">
+                <label for="user_email">user email</label>
+            </div>
             <div class="input-field col s12">
                 <i class="fas fa-user-lock prefix"></i>
                 <input id="password" name="password" type="password" class="validate">
