--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -87,10 +87,12 @@
                 </div>
                 <div class="input-field col s10 input_ing_wrap">
                     <input id="recipe_ingredients" name="recipe_ingredients" type="text" class="validate">
-                    <label for="">Ingredients</label>
+                    <label for="recipe_ingredients">ingredients</label>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col s1">
-                    <button class="add_ing_button">Add</button>
+                    <a href="#" class="add_ing_button"><i class="far fa-plus-square"></i></a>
                 </div>
             </div>
             <div class="row">
@@ -99,19 +101,22 @@
                 </div>
                 <div class="input-field col s10 input_meth_wrap">
                     <input type="text" id="recipe_method" name="recipe_method">
-                    <label for="recipe_method">recipe ingredients</label>
+                    <label for="recipe_method">method</label>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col s1">
-                    <button class="add_meth_button">Add
+                    <a href="#" class="add_meth_button"><i class="far fa-plus-square"></i></a>
                 </div>
-
-                <div class="row">
-                    <div class="col s12 center-align">
-                        <button type="submit">add recipe</button>
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button type="submit">add recipe</button>
                 </div>
-        </form>
+            </div>
     </div>
+    </form>
+</div>
 </div>
 
 {% endblock %}
