--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Font Awesome CDN-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
         integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous"
         type="text/css">
+    <!--Materialize CDN-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
         type="text/css">
+    <!--Link to style.css using jinja template-->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
+    <!--EmailJS script-->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js">
     </script>
     <script type="text/javascript">
@@ -24,11 +28,13 @@
 </head>
 
 <body>
-
+    <!--Materialize sticky header-->
     <header>
         <div class="navbar-fixed">
+            <!--Materialize Navbar-->
             <nav>
                 <div class="nav-wrapper">
+                    <!--jinja templating-->
                     <a href="{{ url_for('landing') }}" class="brand-logo">larder</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
                             class="fas fa-hamburger"></i></a>
@@ -36,9 +42,11 @@
                         <li><a href="{{ url_for('categories') }}">categories</a></li>
                         <li><a href="#" class="dropdown-trigger" data-target="dropdown1">recipes</a></li>
                         <li><a href="{{ url_for('all_books') }}">bookshop</a></li>
+                        <!--jinja if statement to restrict adding a cookbook to larder-admin only-->
                         {% if session.user|lower == "larder-admin"|lower %}
                         <li><a href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
                         {% endif %}
+                        <!-- jinja if statement to restrict access to site unless user is logged in-->
                         {% if session.user|lower %}
                         <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
                         <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
@@ -51,7 +59,7 @@
                 </div>
             </nav>
         </div>
-
+        <!--dropdown content for main nav-->
         <ul id="dropdown1" class="dropdown-content">
             <li><a href="{{ url_for('all_recipes') }}" class="center-align">all recipes</a></li>
             <li class="divider"></li>
@@ -63,6 +71,7 @@
             <li><a href="{{ url_for('show_drinks') }}" class="center-align">drinks</a></li>
         </ul>
 
+        <!--dropdown content for side nav-->
         <ul id="dropdown2" class="dropdown-content">
             <li><a href="{{ url_for('all_recipes') }}" class="center-align">all recipes</a></li>
             <li class="divider"></li>
@@ -74,6 +83,7 @@
             <li><a href="{{ url_for('show_drinks') }}" class="center-align">drinks</a></li>
         </ul>
 
+        <!--Materialize side nav bar for mobile/smaller devices-->
         <ul class="sidenav" id="mobile-demo">
             <li>
                 <h3 class="h3">larder</h3>
@@ -82,9 +92,11 @@
             <li><a href="{{ url_for('categories') }}">categories</a></li>
             <li><a href="#" class="dropdown-trigger" data-target="dropdown2">recipes</a></li>
             <li><a href="{{ url_for('all_books') }}">bookshop</a></li>
+            <!--jinja if statement to restrict adding a cookbook to larder-admin only-->
             {% if session.user|lower == "larder-admin"|lower %}
             <li><a href="{{ url_for('add_cookbook') }}">add cookbook</a></li>
             {% endif %}
+            <!-- jinja if statement to restrict access to site unless user is logged in-->
             {% if session.user|lower %}
             <li><a href="{{ url_for('add_recipe') }}">add recipe</a></li>
             <li><a href="{{ url_for('profile', username=session['user']) }}">profile</a></li>
@@ -96,6 +108,7 @@
         </ul>
     </header>
 
+    <!--flash message section for confirmation messages-->
     <section>
 
         {% with messages = get_flashed_messages() %}
@@ -110,6 +123,7 @@
 
     </section>
 
+    <!--main content section for all templatge pages-->
     <main>
 
         {% block content %}
@@ -119,7 +133,7 @@
     </main>
 
     <footer>
-
+        <!--Materialize footer-->
         <footer class="page-footer">
             <div class="container">
                 <div class="row">
@@ -169,7 +183,7 @@
         </footer>
 
     </footer>
-
+    <!--JS Scripts-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
