--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,98 +1,105 @@
 {% extends "base.html" %}
 {% block content %}
 
+<!--content container-->
 <div class="container">
     <div class="row">
         <h3 class="center-align">categories</h3>
+        <!--show which user is logged in to the site-->
         <p class="right-align">logged in: {{session.user}}</p>
 
     </div>
     <div class="col s12 xl9">
+        <!--first row containing 3 Materialize cards-->
         <div class="row">
-
+            <!--Card 1-->
             <div class="col s12 m4">
                 <div class="card cat-card">
-                    <div class="card-image">
+                    <div class="card-image hover">
+                        <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_starters') }}"><img src="/static/images/starter.jpg" alt=""></a>
                         <a href="{{url_for('show_starters') }}"
                             class="btn-floating halfway-fab waves-effect waves-light green"><i
                                 class="fas fa-plus"></i></a>
                     </div>
-
                     <div class="card-content center-align">
                         <p>starters</p>
                     </div>
                 </div>
             </div>
+            <!--Card 2-->
             <div class="col s12 m4">
                 <div class="card cat-card">
                     <div class="card-image hover">
+                        <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_mains') }}"><img src="/static/images/mains.jpg" alt=""></a>
                         <a href="{{url_for('show_mains') }}"
                             class="btn-floating halfway-fab waves-effect waves-light green"><i
                                 class="fas fa-plus"></i></a>
                     </div>
-
                     <div class="card-content center-align">
                         <p>mains</p>
                     </div>
                 </div>
             </div>
+            <!--Card 3-->
             <div class="col s12 m4">
                 <div class="card cat-card">
                     <div class="card-image hover">
+                        <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_desserts') }}"><img src="/static/images/dessert.jpg" alt=""></a>
                         <a href="{{url_for('show_desserts') }}"
                             class="btn-floating halfway-fab waves-effect waves-light green"><i
                                 class="fas fa-plus"></i></a>
                     </div>
-
                     <div class="card-content center-align">
                         <p>desserts</p>
                     </div>
                 </div>
             </div>
         </div>
-
+        <!--second row containing 3 Materialize cards-->
         <div class="row">
-
+            <!--Card 4-->
             <div class="col s12 m4">
                 <div class="card cat-card">
                     <div class="card-image hover">
+                        <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_sides') }}"><img src="/static/images/sides.jpg" alt=""></a>
                         <a href="{{url_for('show_sides') }}"
                             class="btn-floating halfway-fab waves-effect waves-light green"><i
                                 class="fas fa-plus"></i></a>
                     </div>
-
                     <div class="card-content center-align">
                         <p>sides</p>
                     </div>
                 </div>
             </div>
+            <!--Card 5-->
             <div class="col s12 m4">
                 <div class="card cat-card">
                     <div class="card-image hover">
+                        <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_cakes') }}"><img src="/static/images/biscuits.jpg" alt=""></a>
                         <a href="{{url_for('show_cakes') }}"
                             class="btn-floating halfway-fab waves-effect waves-light green"><i
                                 class="fas fa-plus"></i></a>
                     </div>
-
                     <div class="card-content center-align">
                         <p>cakes & biscuits</p>
                     </div>
                 </div>
             </div>
+            <!--Card 6-->
             <div class="col s12 m4">
                 <div class="card cat-card">
                     <div class="card-image hover">
+                        <!--image and FAB links to show recipes-->
                         <a href="{{url_for('show_drinks') }}"><img src="/static/images/drink.jpg" alt=""></a>
                         <a href="{{url_for('show_drinks') }}"
                             class="btn-floating halfway-fab waves-effect waves-light green"><i
                                 class="fas fa-plus"></i></a>
                     </div>
-
                     <div class="card-content center-align">
                         <p>drinks</p>
                     </div>
