--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -1,16 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
 
+<!--content container-->
 <div class="container">
     <div class="row">
         <div class="col s12">
 
             <h3 class="center-align">recipes</h3>
+            <!--show which user is logged in to the site-->
             <p class="right-align">logged in: {{session.user}}</p>
         </div>
     </div>
 
+    <!--search bar-->
     <div class="row card-panel">
+        <!--form to allow user to input search parameters-->
         <form action="{{ url_for('search') }}" method="post" class="col s12">
             <div class="row valign-wrapper center-align">
                 <div class="input-field col s12">
@@ -31,9 +35,12 @@
     </div>
 
     <div class="row">
+        <!--jinja for loop to retrieve all recipes from DB-->
         {% for recipe in recipes %}
         <div class="col s12 m6 xl4">
+            <!--Materialize card format to show recipes-->
             <div class="card ">
+                <!--Materialize card structure - image and FAB-->
                 <div class="card-image waves-effect waves-block waves-light">
                     <img class="activator" src="{{ recipe.recipe_image }}">
                 </div>
@@ -45,6 +52,7 @@
                     <p class="recipe-p"><a href="{{ url_for('show_recipe', recipe_id=recipe._id) }}" class="btn">Full
                             recipe...</a></p>
                 </div>
+                <!--Materialize card structure - on click of image/FAB-->
                 <div class="card-reveal">
                     <span class="card-title">
                         <i class="far fa-times-circle right"></i></span><br>
@@ -54,12 +62,14 @@
                     <span>Cookbook:</span><span class="right">{{ recipe.cookbook_name }}</span><br>
                     <span>Difficulty:</span><span class="right">{{ recipe.recipe_difficulty }}</span><br>
                     <span>Cooking Time:</span><span class="right">{{ recipe.recipe_time }}</span>
+                    <!--if user is logged in and user added the recipe they are able to edit or delete it from the DB-->
                     {% if session.user|lower == recipe.recipe_added|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
                         <a href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}"
                             class="btn red left">delete</a><br>
                     </div>
+                    <!--if larder-admin is logged in they are able to edit or delete it from the DB-->
                     {% elif session.user|lower == "larder-admin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}" class="btn right">edit</a>
