--- a/templates/add_cookbook.html
+++ b/templates/add_cookbook.html
@@ -2,11 +2,15 @@
 {% block content %}
 
 <h3 class="center-align">add cookbook</h3>
-
+<!--content container-->
 <div class="container">
+    <!--show which user is logged in to the site-->
     <p class="right-align">logged in: {{session.user}}</p>
+    <!--Materialize card-->
     <div class="row card-panel">
+        <!--form to allow input of new cookbook to DB-->
         <form class="col s12" method="POST" action="{{ url_for('add_cookbook') }}">
+            <!--add cookbook name-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-bread-slice fa-2x" id="icon"></i>
@@ -17,6 +21,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add cookbook chef-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-user fa-2x" id="icon"></i>
@@ -27,6 +32,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add cookbook image page URL from Amazon-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-book fa-2x" id="icon"></i>
@@ -37,6 +43,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add cookbook Amazon page URL-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-camera fa-2x" id="icon"></i>
@@ -47,6 +54,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add cookbook description-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-list fa-2x" id="icon"></i>
@@ -57,6 +65,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--submit form info to DB-->
             <div class="row center-align">
                 <div class="col s12">
                     <button class="btn" type="submit">add cookbook</button>
