--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -2,11 +2,15 @@
 {% block content %}
 
 <h3 class="center-align">add recipe</h3>
-
+<!--content container-->
 <div class="container">
+    <!--show which user is logge in to the site-->
     <p class="right-align">logged in: {{session.user}}</p>
+    <!--Materialize card-->
     <div class="row card-panel">
+        <!--form to allow input of new recipe to DB-->
         <form class="col s12" method="POST" action="{{ url_for('add_recipe') }}">
+            <!--add category name fromn dropdown-->
             <div class="row">
                 <div class="col s1" id="icon">
                     <i class="fas fa-question-circle icon-size fa-1x"></i>
@@ -14,6 +18,7 @@
                 <div class="input-field col s10">
                     <select id="category_name" name="category_name" class="validate" required>
                         <option value="" disabled selected>recipe category</option>
+                        <!--jinja loop to pull category names from DB-->
                         {% for category in categories %}
                         <option value="{{ category.category_name }}">{{ category.category_name }}</option>
                         {% endfor %}
@@ -22,6 +27,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add recipe name-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-bread-slice fa-1x" id="icon"></i>
@@ -32,6 +38,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add recipe chef-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-user fa-1x" id="icon"></i>
@@ -42,6 +49,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add recipe cookbook name-->
             <div class="row">
                 <div class="col s1" id="icon">
                     <i class="fas fa-book fa-1x"></i>
@@ -52,6 +60,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add recipe image URL-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-camera fa-1x" id="icon"></i>
@@ -62,6 +71,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add recipe difficulty-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-user-cog fa-1x" id="icon"></i>
@@ -72,6 +82,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add recipe time-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-clock fa-1x" id="icon"></i>
@@ -82,6 +93,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--add recipe ingredients-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-list fa-1x" id="icon"></i>
@@ -91,11 +103,13 @@
                     <label for="recipe_ingredients">ingredients</label>
                 </div>
             </div>
+            <!--add extra recipe ingredients button-->
             <div class="row">
                 <div class="col s1">
                     <a href="#" class="add_ing_button"><i class="far fa-plus-square"></i></a>
                 </div>
             </div>
+            <!--add recipe method textarea-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-list fa-1x" id="icon"></i>
@@ -105,11 +119,13 @@
                     <label for="recipe_method">method</label>
                 </div>
             </div>
+            <!--add extra recipe method textarea-->
             <div class="row">
                 <div class="col s1">
                     <a href="#" class="add_meth_button"><i class="far fa-plus-square"></i></a>
                 </div>
             </div>
+            <!--submit form to DB-->
             <div class="row">
                 <div class="col s12 center-align">
                     <button class="btn" type="submit">add recipe</button>
