--- a/templates/edit_cookbook.html
+++ b/templates/edit_cookbook.html
@@ -2,11 +2,15 @@
 {% block content %}
 
 <h3 class="center-align">edit cookbook</h3>
-
+<!--content container-->
 <div class="container">
+    <!--show which user is logged in to the site-->
     <p class="right-align">logged in: {{session.user}}</p>
+    <!--Materialize card-->
     <div class="row card-panel">
+        <!--form to allow display and editing of cookbook info-->
         <form class="col s12" method="POST" action="{{ url_for('edit_cookbook', cookbook_id=cookbook._id) }}">
+            <!--display / edit cookbook name-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-bread-slice fa-2x" id="icon"></i>
@@ -18,6 +22,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--display / edit cookbook chef-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-user fa-2x" id="icon"></i>
@@ -29,6 +34,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--display / edit cookbook image-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-book fa-2x" id="icon"></i>
@@ -40,6 +46,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--display / edit cookbook amazon URL-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-camera fa-2x" id="icon"></i>
@@ -51,6 +58,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--display / edit cookbook description-->
             <div class="row">
                 <div class="col s1">
                     <i class="fas fa-list fa-2x" id="icon"></i>
@@ -62,6 +70,7 @@
                 </div>
                 <div class="col s1"></div>
             </div>
+            <!--submit form info to DB-->
             <div class="row">
                 <a href="{{ url_for('all_books') }}" class="btn red left">cancel</a>
                 <button type="submit" class="btn right">edit</button>
