--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -156,7 +156,7 @@
             <!--submit form to DB-->
             <div class="row">
                 <a href="{{ url_for('all_recipes') }}" class="btn red-btn left">cancel</a>
-                <button type="submit" class="btn right">edit</button>
+                <button type="submit" class="btn right"><i class="far fa-edit">edit</button>
             </div>
         </form>
     </div>
