--- a/templates/cookbooks.html
+++ b/templates/cookbooks.html
@@ -75,7 +75,7 @@
                     {% if session.user|lower == "larderadmin"|lower %}
                     <div class="row center-align rec-card">
                         <a href="{{ url_for('edit_cookbook', cookbook_id=cookbook._id) }}" class="btn right"><i
-                                class="far fa-edit">edit</a>
+                                class="far fa-edit"></i>edit</a>
                         <a href="{{ url_for('delete_cookbook', cookbook_id=cookbook._id) }}"
                             class="btn red left">delete</a><br>
                     </div>
